[metadata]
name = tengi
version = 0.5.7
author = luckybots
author_email = luckybots@protonmail.com
description = Telegram bot engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luckybots/tengi
project_urls =
    Bug Tracker = https://github.com/luckybots/tengi/issues
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pymitter
    pyTelegramBotAPI
    python-jsonstore
    Telethon
    typeguard

[options.packages.find]
where = src
